# selfbuilding-site

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/src/: logging_config.py  main.py  websocket_manager.py
backend/src/models/: user.py
backend/src/routes/: user.py
backend/src/static/: index.html
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: LiveAgentConsole.jsx
principles/: principles.json
